-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 3.4.0, Qt Creator 3.5.0-beta1
-
Windows 7 SP1 64 bit
- Open the attached project.
- Configure it to use a kit with Qt 4.8 built by MSVC2010.
- Run the project.
It runs, but the application is unresponsive. - Click the application's window.
It takes about 30 seconds until the application closes. - Run the project in Analyzer.
It runs, but the application is unresponsive. - Click the application's window.
It takes about 20 seconds until the application closes. - Run the project in Analyzer again.
- Click the Analyzer's "Stop" button.
It takes about 30 seconds until the Analyzer stops and gathers data.
Found by Squish test tst_simple_analyze.
ffc2613d32c04efb4430e38968e1cfde56c8299c is the first bad commit
commit ffc2613d32c04efb4430e38968e1cfde56c8299c
Author: Daniel Teske <daniel.teske@theqtcompany.com>
Date: Thu Apr 16 17:26:27 2015 +0200
Fix non responding on being overwhelmed with debug output
Change-Id: I0356c71850a6b5a2147ac35cb79ae53e234aa3e0
Task-number: QTCREATORBUG-14096
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>
Before this change, the application stopped immediately in the mentioned situations. It also stops immediately when run from the command line. Prove me wrong but the old behavior seems better to me.
- replaces
-
QTCREATORBUG-15039 Massive qdebug() slowdown in "Run" mode in 3.5+
-
- Closed
-
- resulted from
-
QTCREATORBUG-14096 Qt Creator is unable to recover from an infinite loop when debugging
-
- Closed
-
- resulted in
-
QTCREATORBUG-15546 [Reg 3.5->3.6] Unit tests do not output a thing in Application output pane
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-14307 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 111403,2 | Make OutputWindow a bit faster | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 112546,3 | Squish: Don't analyze kits which take too long | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 125133,3 | WinDebugInterface: Compress events | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 125352,1 | WinDebugInterface: Compress events | 3.5 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |
| 125520,2 | Squish: Don't check state of closed bug | 3.5 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 125522,1 | Squish: Don't check state of closed bug | master | qt-creator/qt-creator | Status: ABANDONED | -2 | 0 |
| 125523,3 | Squish: Remove workaround for fixed bug | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |