Make OutputWindow a bit faster

By limiting how often we scroll to the bottom and thus limiting
how often we redraw.

Change-Id: I42ec9dc6284112025108000420ccdfdf5d003f34
Task-number: QTCREATORBUG-14307
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>